--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 </TR>
 
 <TR>
-<TH><IMG SRC = "ฝน25.JPG"></TH>
-<TH>สุภาณี พละทรัพย์ (ฝน)</TH>
+<TH><IMG SRC = "ฝน10.JPG"></TH>
+<TH> สุภาณี พละทรัพย์ (ฝน)</TH>
 </TR>
 
 <TR>
-<TH><IMG SRC = "ไอซ์.JPG"></TH>
-<TH> ปริฐตา เกตุพุก (ไอซ์)</TH>
-</TR>
-
-<TR>
-<TH><IMG SRC = "ฝ้ายยยยยยยยย.JPG"></TH>
+<TH><IMG SRC = "ฝ้าย10.JPG"></TH>
 <TH>ยุวดี พุทธศรีระ (ฝ้าย)</TH>
+</TR>
+
+<TR>
+<TH><IMG SRC = "ตัง10.JPG"></TH>
+<TH>ภาวนา นิลคูหา (ตัง)</TH>
 </TR>
 
 </TABLE>
@@ -33,31 +33,20 @@
 
 <html>
 <head>
-<title>ยินดีต้อนรับสู่เว็บไซต์ อิสริยาภรณ์</title>
+<title>ยินดีต้อนรับสู่เว็บไซต์  อิสริยาภรณ์</title>
 
 <body>
 <TABLE BORDER = "2" width = "50%" height = "60%" align="center">
 <CAPTION> <b> <font size="10" face="angsana new">เพื่อนสนิทของฉัน</font> </b> </CAPTION
 <TABLE BORDER = "2" align="center">
 <CAPTION> <b> <font size="6" face="angsana new">เพื่อนสนิทของข้าพเจ้า</font> </b> </CAPTION>
-<TR> <TD width="30%" align="center"> ชื่อ-นามสกุล </TD> <TD width="30%" align="center"> ภาพถ่าย </TD> </TR>
-<TR> <TD align="center"> ตะวัน ขาวหอมกลิ่น </TD> <TD align="center"> <IMG SRC="ตะวัน.jpg"> </TD> </TR>
-<TR> <TD align="center"> อนุภัทร สุขใส </TD> <TD align="center"> <IMG SRC="ปอน1.jpg"> </TD> </TR>
-<TR> <TD align="center">ธนาวุฒิ นิยม</TD> <TD align="center"> <IMG SRC="นุก22.jpg"> </TD> </TR>
-<TR> <TD align="center"> ศรัญญา สราญนาค </TD> <TD align="center"> <IMG SRC="มิค.jpg"> </TD> </TR>
-<TR> <TD align="center">ภาวนา นิคคูหา</TD> <TD align="center"> <IMG SRC="ตังง.jpg"> </TD> </TR>
-<TR> <TD align="center"> สุรีพร ดีวุฒิ</TD> <TD align="center"> <IMG SRC="อีฟ2.jpg"> </TD> </TR>
+<TR> <TD width="30%" align="center"> ชื่อ-สกุล </TD> <TD width="30%" align="center"> ภาพถ่าย </TD> </TR>
+<TR> <TD align="center"> โชติกา แดงงาม         </TD> <TD align="center"> <IMG SRC="เฟริน10.jpg"> </TD> </TR>
+<TR> <TD align="center"> ปริฐตา เกตูพุก           </TD> <TD align="center"> <IMG SRC="ไอซ์10.jpg"> </TD> </TR>
+<TR> <TD align="center">สุภาณี พละทรัพย์   </TD> <TD align="center"> <IMG SRC="ฝน10.jpg"> </TD> </TR>
+<TR> <TD align="center"> ตะวัน ขาวหอมกลิ่น     </TD> <TD align="center"> <IMG SRC="ปั้น10.jpg"> </TD> </TR>
+<TR> <TD align="center"> ธีรศักดิ์ คงศิริ              </TD> <TD align="center"> <IMG SRC="แต๊ง10.jpg"> </TD> </TR>
+<TR> <TD align="center"> เพทาย สำเร็จสิน        </TD> <TD align="center"> <IMG SRC="บอส10.jpg"> </TD> </TR>
 </TABLE>
 </BODY>
 </html>
-
-<TABLE width=1000 BORDER="2">
-<TH><FONT face="cordia new" SIZE="3">เพี่อนสนิทของฉัน<FONT></TH></TR>
-<TD align="center"> <IMG SRC="อิสริยาภรณ์.jpg"</TD> </TR>
-<TH><FONT face="cordia new" SIZE="3">นางสาวอิสริยาภรณ์ เมฆฤทธิ์<FONT></TH></TR>
-</TABLE>
-<TABLE width=1000 BORDER="2">
-<TH><FONT face="cordia new" SIZE="3">เพศชาย<FONT></TH><TH><FONT face="cordia new" SIZE="3">เพศหญิง<FONT></TH></TR>
-<TD> <IMG SRC="ตะวัน.jpg">นายตะวัน ขาวหอมกลิ่น </TD><TD> <IMG SRC="มิค.jpg">นางสาว ศรัญญา สราญนาค </TD> </TR>
-<TD> <IMG SRC="ปอน1.jpg">นาย อนุภัทร สุขใส </TD><TD> <IMG SRC="ตังง.jpg">นางสาว ภาวนา นิคคูหา </TD> </TR>
-<TD> <IMG SRC="นุก22.jpg">นาย ธนาวุฒิ นิยม </TD><TD> <IMG SRC="อีฟ2.jpg">นางสาว สุรีพร ดีวุฒิ </TD> </TR>
